// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Theme tests > flair object is working 1`] = `
".JnFTUa_case-1 {
  color: var(--colors-red-100);
}

.JnFTUa_case-2 {
  color: var(--colors-red-200);
}

.JnFTUa_case-2.JnFTUa_case-2-1 {
  background-color: var(--colors-red-200);
}

.JnFTUa_case-3 {
  color: var(--colors-red-300);
  padding: var(--spacing-4) var(--spacing-6);
}

@media (min-width: 640px) {
  .JnFTUa_case-3 {
    color: var(--colors-red-400);
  }
}

.JnFTUa_case-4 {
  color: #ff0004;
}

.JnFTUa_case-5 {
  color: #ff0005;
}

.JnFTUa_case-5.JnFTUa_case-5-1 {
  background-color: #ff0005;
}

.JnFTUa_case-5.JnFTUa_case-5-2 {
  background-color: #ff0006;
}

.JnFTUa_case-6 {
  color: #ff0006;
}

.JnFTUa_case-6.JnFTUa_case-6-1 {
  background-color: #ff0006;
}

.JnFTUa_case-6.JnFTUa_case-6-3 {
  border-color: #ff0006;
}

.JnFTUa_case-6.JnFTUa_case-6-4 {
  outline-color: #ff0006;
}

.JnFTUa_case-7-1 {
  color: #ff0007;
}

.JnFTUa_case-8.JnFTUa_case-8-1 {
  background-color: #ff0008;
}

.JnFTUa_case-8.JnFTUa_case-8-2 {
  color: #ff0008;
}

.JnFTUa_case-9-1 {
  color: #ff0009;
}

.JnFTUa_case-9-2 {
  background-color: #ff0009;
}

.JnFTUa_case-10 {
  color: #ff000a;
}

.JnFTUa_case-11-1 {
  color: #ff000b;
}

.JnFTUa_case-11-2 {
  background-color: #ff000b;
}

.JnFTUa_case-12-1 {
  color: #ff000c;
}

.JnFTUa_case-12-2 {
  background-color: #ff000c;
}

.JnFTUa_case-13 {
  color: #ff000d;
}

.JnFTUa_case-14 {
  color: #ff000e;
}

.JnFTUa_case-15 {
  color: #ff000f;
}

.JnFTUa_case-16 {
  color: #ff0010;
}
"
`;

exports[`Theme tests > flair object is working 2`] = `
".sw5AEW_case-1 {
  color: var(--colors-red-100);
}

.sw5AEW_case-2 {
  color: var(--colors-red-200);
}

.sw5AEW_case-2.sw5AEW_case-2-1 {
  background-color: var(--colors-red-200);
}

.sw5AEW_case-3 {
  color: var(--colors-red-300);
  padding: var(--spacing-4) var(--spacing-6);
}

@media (min-width: 640px) {
  .sw5AEW_case-3 {
    color: var(--colors-red-400);
  }
}

.sw5AEW_case-4 {
  color: #ff0004;
}

.sw5AEW_case-5 {
  color: #ff0005;
}

.sw5AEW_case-5.sw5AEW_case-5-1 {
  background-color: #ff0005;
}

.sw5AEW_case-5.sw5AEW_case-5-2 {
  background-color: #ff0006;
}

.sw5AEW_case-6 {
  color: #ff0006;
}

.sw5AEW_case-6.sw5AEW_case-6-1 {
  background-color: #ff0006;
}

.sw5AEW_case-6.sw5AEW_case-6-3 {
  border-color: #ff0006;
}

.sw5AEW_case-6.sw5AEW_case-6-4 {
  outline-color: #ff0006;
}

.sw5AEW_case-7-1 {
  color: #ff0007;
}

.sw5AEW_case-8.sw5AEW_case-8-1 {
  background-color: #ff0008;
}

.sw5AEW_case-8.sw5AEW_case-8-2 {
  color: #ff0008;
}

.sw5AEW_case-9-1 {
  color: #ff0009;
}

.sw5AEW_case-9-2 {
  background-color: #ff0009;
}

.sw5AEW_case-10 {
  color: #ff000a;
}

.sw5AEW_case-11-1 {
  color: #ff000b;
}

.sw5AEW_case-11-2 {
  background-color: #ff000b;
}

.sw5AEW_case-12-1 {
  color: #ff000c;
}

.sw5AEW_case-12-2 {
  background-color: #ff000c;
}

.sw5AEW_case-13 {
  color: #ff000d;
}

.sw5AEW_case-14 {
  color: #ff000e;
}

.sw5AEW_case-15 {
  color: #ff000f;
}

.sw5AEW_case-16 {
  color: #ff0010;
}
"
`;

exports[`Theme tests > flair object media is working 1`] = `
".Sram4W_case-1 {
  color: var(--colors-red-100);
}

@media (min-width: 600px) {
  .Sram4W_case-1 {
    background-color: var(--colors-red-200);
  }
}

@media (min-width: 1536px) {
  .Sram4W_case-1 {
    background-color: var(--colors-red-200);
  }

  .Sram4W_case-1 .Sram4W_case-2 {
    background-color: var(--colors-red-300);
  }
}
"
`;

exports[`Theme tests > flair string is working 1`] = `
".GJBWWW_case-1 {
  color: var(--colors-red-100);
}

.GJBWWW_case-2 {
  color: var(--colors-red-200);
}

.GJBWWW_case-2.GJBWWW_case-2-1 {
  background-color: var(--colors-red-200);
}

.GJBWWW_case-3 {
  color: var(--colors-red-300);
  padding: var(--spacing-4) var(--spacing-6);
}

@media (min-width: 640px) {
  .GJBWWW_case-3 {
    color: var(--colors-red-400);
  }
}

.GJBWWW_case-4 {
  color: #ff0004;
}

.GJBWWW_case-5 {
  color: #ff0005;
}

.GJBWWW_case-5.GJBWWW_case-5-1 {
  background-color: #ff0005;
}

.GJBWWW_case-5.GJBWWW_case-5-2 {
  background-color: #ff0006;
}

.GJBWWW_case-6 {
  color: #ff0006;
}

.GJBWWW_case-6.GJBWWW_case-6-1 {
  background-color: #ff0006;
}

.GJBWWW_case-6.GJBWWW_case-6-3 {
  border-color: #ff0006;
}

.GJBWWW_case-6.GJBWWW_case-6-4 {
  outline-color: #ff0006;
}

.GJBWWW_case-7-1 {
  color: #ff0007;
}

.GJBWWW_case-8.GJBWWW_case-8-1 {
  background-color: #ff0008;
}

.GJBWWW_case-8.GJBWWW_case-8-2 {
  color: #ff0008;
}

.GJBWWW_case-9-1 {
  color: #ff0009;
}

.GJBWWW_case-9-2 {
  background-color: #ff0009;
}

.GJBWWW_case-10 {
  color: #ff000a;
}

.GJBWWW_case-11-1 {
  color: #ff000b;
}

.GJBWWW_case-11-2 {
  background-color: #ff000b;
}

.GJBWWW_case-12-1 {
  color: #ff000c;
}

.GJBWWW_case-12-2 {
  background-color: #ff000c;
}

.GJBWWW_case-13 {
  color: #ff000d;
}

.GJBWWW_case-14 {
  color: #ff000e;
}

.GJBWWW_case-15 {
  color: #ff000f;
}

.GJBWWW_case-16 {
  color: #ff0010;
}
"
`;

exports[`Theme tests > flair string is working 2`] = `
".B3XaXW_case-1 {
  color: var(--colors-red-100);
}

.B3XaXW_case-2 {
  color: var(--colors-red-200);
}

.B3XaXW_case-2.B3XaXW_case-2-1 {
  background-color: var(--colors-red-200);
}

.B3XaXW_case-3 {
  color: var(--colors-red-300);
  padding: var(--spacing-4) var(--spacing-6);
}

@media (min-width: 640px) {
  .B3XaXW_case-3 {
    color: var(--colors-red-400);
  }
}

.B3XaXW_case-4 {
  color: #ff0004;
}

.B3XaXW_case-5 {
  color: #ff0005;
}

.B3XaXW_case-5.B3XaXW_case-5-1 {
  background-color: #ff0005;
}

.B3XaXW_case-5.B3XaXW_case-5-2 {
  background-color: #ff0006;
}

.B3XaXW_case-6 {
  color: #ff0006;
}

.B3XaXW_case-6.B3XaXW_case-6-1 {
  background-color: #ff0006;
}

.B3XaXW_case-6.B3XaXW_case-6-3 {
  border-color: #ff0006;
}

.B3XaXW_case-6.B3XaXW_case-6-4 {
  outline-color: #ff0006;
}

.B3XaXW_case-7-1 {
  color: #ff0007;
}

.B3XaXW_case-8.B3XaXW_case-8-1 {
  background-color: #ff0008;
}

.B3XaXW_case-8.B3XaXW_case-8-2 {
  color: #ff0008;
}

.B3XaXW_case-9-1 {
  color: #ff0009;
}

.B3XaXW_case-9-2 {
  background-color: #ff0009;
}

.B3XaXW_case-10 {
  color: #ff000a;
}

.B3XaXW_case-11-1 {
  color: #ff000b;
}

.B3XaXW_case-11-2 {
  background-color: #ff000b;
}

.B3XaXW_case-12-1 {
  color: #ff000c;
}

.B3XaXW_case-12-2 {
  background-color: #ff000c;
}

.B3XaXW_case-13 {
  color: #ff000d;
}

.B3XaXW_case-14 {
  color: #ff000e;
}

.B3XaXW_case-15 {
  color: #ff000f;
}

.B3XaXW_case-16 {
  color: #ff0010;
}
"
`;

exports[`Theme tests > style tag is working 1`] = `
".uLUfvG_case-1 {
  color: var(--colors-red-100);
}

.uLUfvG_case-2 {
  color: var(--colors-red-200);
}

.uLUfvG_case-2.uLUfvG_case-2-1 {
  background-color: var(--colors-red-200);
}

.uLUfvG_case-3 {
  color: var(--colors-red-300);
}

@media (max-width: 600px) {
  .uLUfvG_case-3 {
    color: var(--colors-red-400);
  }
}

.uLUfvG_case-4 {
  color: #ff0004;
  margin-top: var(--spacing-1);
}

.uLUfvG_case-5 {
  color: #ff0005;
}

.uLUfvG_case-5.uLUfvG_case-5-1 {
  background-color: #ff0005;
}

.uLUfvG_case-5.uLUfvG_case-5-2 {
  background-color: #ff0006;
}

.uLUfvG_case-6 {
  color: #ff0006;
}

.uLUfvG_case-6.uLUfvG_case-6-1 {
  background-color: #ff0006;
}

.uLUfvG_case-6.uLUfvG_case-6-3 {
  border-color: #ff0006;
}

.uLUfvG_case-6.uLUfvG_case-6-4 {
  outline-color: #ff0006;
}

.uLUfvG_case-7-1 {
  color: #ff0007;
}

.uLUfvG_case-8.uLUfvG_case-8-1 {
  background-color: #ff0008;
}

.uLUfvG_case-8.uLUfvG_case-8-2 {
  color: #ff0008;
}

.uLUfvG_case-9-1 {
  color: #ff0009;
}

.uLUfvG_case-9-2 {
  background-color: #ff0009;
}

.uLUfvG_case-10 {
  color: #ff000a;
}

.uLUfvG_case-11-1 {
  color: #ff000b;
}

.uLUfvG_case-11-2 {
  background-color: #ff000b;
}

.uLUfvG_case-12-1 {
  color: #ff000c;
}

.uLUfvG_case-12-2 {
  background-color: #ff000c;
}

.uLUfvG_case-13 {
  color: #ff000d;
}

.uLUfvG_case-14 {
  color: #ff000e;
}

.uLUfvG_case-15 {
  color: #ff000f;
}

.uLUfvG_case-16 {
  color: #ff0010;
}
"
`;
